--- a/index.html
+++ b/index.html
@@ -5,8 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite 404</title>
+    <style>
+        main {
+            display: inline-block;
+            width: 1000px;
+            background-color: royalblue;
+            margin-left: calc((100% - 1000px) / 2);
+        }
+        header{
+            display: inline-block;
+            width: 100%;
+            margin-bottom: 20px;
+        }
+        section{
+            display: inline-block;
+            width: 100%;
+            image
+        }
+        nav{
+            float: right;
+        }
+        div{
+
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <header>
+           <img style="width: 7%;" src="./logo4 copy.png" alt="logo">
+            <nav>
+                <a href="#">home</a>
+                <a href="#">tracks</a>
+                <a href="#">library</a>
+                <a href="#">community</a>
+                <a style="border-bottom-left-radius: 4px;" href="#">sign in</a>
+            </nav>
+        </header>
+        <section>
+            <div>
+                <h1>404</h1>
+               <p>the link is broken or page has been removed</p>
+            </div>
+            <img style="float: right;width: 40%; ;" src="./mergaitelogo2 copy.png" alt="Mergaite">
+        </section>
+    </main>
 </body>
 </html>
