--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <style>
         main {
             display: inline-block;
-            width: 1000px;
-            background-color: royalblue;
-            margin-left: calc((100% - 1000px) / 2);
+            width: 800px;
+            margin-left: calc((100% - 800px) / 2);
         }
         header{
             display: inline-block;
@@ -20,12 +19,11 @@
         section{
             display: inline-block;
             width: 100%;
-            image
         }
         nav{
             float: right;
         }
-        div{
+        div{ display: inline-block; width: 100%;
 
         }
     </style>
@@ -33,13 +31,13 @@
 <body>
     <main>
         <header>
-           <img style="width: 7%;" src="./logo4 copy.png" alt="logo">
+           <img src="./logo4 copy.png" alt="logo">
             <nav>
                 <a href="#">home</a>
                 <a href="#">tracks</a>
                 <a href="#">library</a>
                 <a href="#">community</a>
-                <a style="border-bottom-left-radius: 4px;" href="#">sign in</a>
+                <a href="#">sign in</a>
             </nav>
         </header>
         <section>
