--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         header{
             display: inline-block;
             width: 100%;
-            margin-bottom: 20px;
+            margin-bottom: 0px;
         }
         section{
             display: inline-block;
@@ -23,8 +23,25 @@
         nav{
             float: right;
         }
-        div{ display: inline-block; width: 100%;
+        div{ display: inline-block; width: 40%;
+        margin: 10% 0% 0% 7%;
 
+        }
+        a{
+            text-decoration: none;
+            text-transform: capitalize;
+            font-family: Arial, Helvetica, sans-serif;
+            margin-right: 25px;
+            color: slategray;
+        }
+
+        h1{
+            font-size: 90px;
+            margin: 0% 0%;
+        }
+        p{
+            font-size: 30px;
+            margin: 0% 0%;
         }
     </style>
 </head>
@@ -45,7 +62,7 @@
                 <h1>404</h1>
                <p>the link is broken or page has been removed</p>
             </div>
-            <img style="float: right;width: 40%; ;" src="./mergaitelogo2 copy.png" alt="Mergaite">
+            <img style="float: right;width: 53%; ;" src="./mergaitelogo2 copy.png" alt="Mergaite">
         </section>
     </main>
 </body>
