--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite 404</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/png">
-    <link rel="import" href="component.html">
+    <!-- link favicon -->
     <style>
         body{
             background-color: #f8f8f8;
