--- a/index.html
+++ b/index.html
@@ -40,12 +40,24 @@
         a{
             color: slategray;
             line-height: 20px;
-            font-size: 18px;
+            font-size: 14px;
             float: left;
             text-decoration: none;
             text-transform: capitalize;
             font-family: Arial, Helvetica, sans-serif;
             margin-left: 25px;
+        }
+
+        a:last-of-type {
+            color: royalblue;
+            text-transform: uppercase;
+            border: 4px solid black;
+            border-radius: 17px;
+            padding: 3px;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-top: -7px;
+
         }
         section{
             display: inline-block;
