--- a/index.html
+++ b/index.html
@@ -38,25 +38,28 @@
             margin-top: 15px;
         }
         a{
-            color: slategray;
-            line-height: 20px;
-            font-size: 14px;
+            display: inline-block;
             float: left;
-            text-decoration: none;
+            padding: 3px;
+            padding-left: 5px;
+            padding-right: 5px;
+            color: slategray;
+            font-size: 18px;
+            line-height: 20px;
             text-transform: capitalize;
-            font-family: Arial, Helvetica, sans-serif;
-            margin-left: 25px;
+            text-decoration: none;
+            border: 4px solid transparent;
+            border-radius: 17px;
+            
         }
 
         a:last-of-type {
-            color: royalblue;
+            padding-left: 15px;
+            padding-right: 15px;
+            margin-left: 15px;
+            border-color: royalblue;
             text-transform: uppercase;
-            border: 4px solid black;
-            border-radius: 17px;
-            padding: 3px;
-            padding-left: 20px;
-            padding-right: 20px;
-            margin-top: -7px;
+            
 
         }
         section{
