--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Mergaite 404</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/png">
     <!-- link favicon -->
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <main>
         <header>
-           <img src="./logo4 copy.png" alt="logo">
+           <img src="./img/favicon.png" alt="logo">
             <nav>
                 <a href="#">home</a>
                 <a href="#">tracks</a>
@@ -26,7 +26,7 @@
                 <h1>404</h1>
                <p>The link is broken or the page has been removed.</p>
             </div>
-            <img src="./mergaitelogo2 copy.png" alt="Mergaite">
+            <img src="./img/mergaitelogo2 copy.png" alt="Mergaite">
         </section>
 
         <nav> <p style="line-height: 100px; font-size: 18px; background-color: tomato;">Lorem ipsum dolor sit amet.</p>
