--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mergaite 404</title>
-    <link rel="shortcut icon" href="./favicon.png" type="image/png">
+    <title>Mergaite 404</title> 
     <!-- link favicon -->
+    <link rel="shortcut icon" href="./favicon.png" type="image/png">
+    <!-- link i css faila -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -23,17 +24,12 @@
         </header>
         <section>
             <div>
+                
                 <h1>404</h1>
                <p>The link is broken or the page has been removed.</p>
             </div>
             <img src="./img/mergaitelogo2 copy.png" alt="Mergaite">
         </section>
-
-        <nav> <p style="line-height: 100px; font-size: 18px; background-color: tomato;">Lorem ipsum dolor sit amet.</p>
-        </nav>
-        <nav style="height: 100px; display: inline;">
-            <p style="text-align: center;">Lorem ipsum dolor sit amet.</p>
-        </nav>
     </main>
 </body>
 </html>
